; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/mm/extr_dma-mapping-nommu.c_arm_nommu_dma_map_page.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/mm/extr_dma-mapping-nommu.c_arm_nommu_dma_map_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.page = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.device*, %struct.page*, i64, i64, i32, i64)* @arm_nommu_dma_map_page to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @arm_nommu_dma_map_page(%struct.device* %0, %struct.page* %1, i64 %2, i64 %3, i32 %4, i64 %5) #0 {
  %7 = alloca %struct.device*, align 8
  %8 = alloca %struct.page*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  store %struct.device* %0, %struct.device** %7, align 8
  store %struct.page* %1, %struct.page** %8, align 8
  store i64 %2, i64* %9, align 8
  store i64 %3, i64* %10, align 8
  store i32 %4, i32* %11, align 4
  store i64 %5, i64* %12, align 8
  %14 = load %struct.page*, %struct.page** %8, align 8
  %15 = call i64 @page_to_phys(%struct.page* %14)
  %16 = load i64, i64* %9, align 8
  %17 = add i64 %15, %16
  store i64 %17, i64* %13, align 8
  %18 = load i64, i64* %13, align 8
  %19 = load i64, i64* %10, align 8
  %20 = load i32, i32* %11, align 4
  %21 = call i32 @__dma_page_cpu_to_dev(i64 %18, i64 %19, i32 %20)
  %22 = load i64, i64* %13, align 8
  ret i64 %22
}

declare dso_local i64 @page_to_phys(%struct.page*) #1

declare dso_local i32 @__dma_page_cpu_to_dev(i64, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
